<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triage_wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nurses.triage.Screen_patient" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="Health Card Number"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:paddingBottom="10dp"
        android:text="@string/birthday_date"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_medium_size" />

    <DatePicker
        android:id="@+id/datePickerBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSavePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonNewPatCancel"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonNewPatCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSavePatient"
        android:layout_alignBottom="@+id/buttonSavePatient"
        android:layout_toLeftOf="@+id/buttonSavePatient"
        android:text="@string/new_condition" />
    
</RelativeLayout>
