<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TriageActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triage_background_dark"
    tools:context="com.nurses.triage.Screen_patient" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/editTextNewPatientHealthCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/health_card_number"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextNewPatientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/patient_name"
                android:inputType="textPersonName"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />

            <TextView
                android:id="@+id/textViewNewPatientBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/birthday_date"
                android:textColor="@color/color_background_2"
                android:textSize="@dimen/text_medium_size" />

            <DatePicker
                android:id="@+id/datePickerNewPatientBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4.90"
                android:calendarViewShown="false"
                android:paddingBottom="90dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonNewPatientSave"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/triage_background"
        android:text="@string/save"
        android:textColor="@color/text_white" />

</RelativeLayout>