<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triage_background_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nurses.triage.Screen_list_conditions" >

    <TextView
        android:id="@+id/textViewListConditionsHealthCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/text_white"
        android:hint="@string/health_card_number"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/health_card_number"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_medium_size" />

    <TextView
        android:id="@+id/textViewListConditionsPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewListConditionsHealthCardNumber"
        android:layout_marginTop="8dp"
        android:background="@color/text_white"
        android:hint="@string/patient_name"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/patient_name"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_medium_size" />

    <TextView
        android:id="@+id/textViewListConditionsConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewListConditionsPatientName"
        android:layout_below="@+id/textViewListConditionsPatientName"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:text="@string/conditions"
        android:textColor="@color/color_background_2"
        android:textSize="@dimen/text_medium_size" />

    <ListView
        android:id="@+id/listViewListConditions"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/textViewListConditionsPatientName"
        android:layout_below="@+id/textViewListConditionsConditions"
        android:background="@color/text_white" >
    </ListView>

    <TextView
        android:id="@+id/textViewListConditionsPrescriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewListConditionsPatientName"
        android:layout_below="@+id/listViewListConditions"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:text="@string/prescriptions"
        android:textColor="@color/color_background_2"
        android:textSize="@dimen/text_medium_size" />

    <ListView
        android:id="@+id/listViewListPrescriptions"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/textViewListConditionsPatientName"
        android:layout_below="@+id/textViewListConditionsPrescriptions"
        android:background="@color/text_white" >
    </ListView>

</RelativeLayout>