<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triage_background"
    tools:context="com.nurses.triage.Screen_login" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="50dp"
                android:paddingTop="20dp"
                android:src="@drawable/main_icon_app_512x512" />

            <EditText
                android:id="@+id/editTextLoginUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_username"
                android:drawableLeft="@drawable/login_user"
                android:ems="10"
                android:hint="@string/user"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/text_black" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_password"
                android:drawableLeft="@drawable/login_passw"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/text_black" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="271dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/triage_background_dark"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text_white" />

</RelativeLayout>